GNOME Bugzilla – Bug 796503
A bug in basic-tutorial-13.c
Last modified: 2018-06-14 05:12:09 UTC
It seems that there's a bug in the basic-tutorial-13.c, line 78, when data->rate is <0. Here's an error shown: GStreamer-CRITICAL **: gst_event_new_step: assertion 'rate > 0.0' failed GStreamer-CRITICAL **: gst_element_send_event: assertion 'event != NULL' failed According to the documentation (https://gstreamer.freedesktop.org/data/doc/gstreamer/head/gstreamer/html/GstEvent.html#gst-event-new-step) a rate of <= is not allowed. It should probably be the absolute value of data->rate.
Yes, thanks for noticing. Do you want to provide a patch?
Created attachment 372625 [details] [review] A patch for basic-tutorial-13.c
Hope this works. I don't have a c installed (nor do I care to install it ATM).
Thanks, will merge it later :)
Comment on attachment 372625 [details] [review] A patch for basic-tutorial-13.c commit 9b5958a22124c03cc8007e1353c511c5cc6a7aae (HEAD -> master) Author: Tomislav Tustonic <tomislavtustonic@gmail.com> Date: Wed Jun 13 10:58:38 2018 +0300 basic-tutorial-13: Step events need absolute values for the rate They can't change playback direction but are based on the current playback direction. https://bugzilla.gnome.org/show_bug.cgi?id=796503
Also changed it in the text.
Could you also change it in code in the document (https://gstreamer.freedesktop.org/documentation/tutorials/basic/playback-speed.html)? For the people who read the documentation :) ?
(In reply to tomislavtustonic from comment #7) > Could you also change it in code in the document > (https://gstreamer.freedesktop.org/documentation/tutorials/basic/playback- > speed.html)? For the people who read the documentation :) ? That will happen automatically next time someone reruns the updater for that