basic-tutorial-13: Step events need absolute values for the rate

They can't change playback direction but are based on the current
playback direction.

https://bugzilla.gnome.org/show_bug.cgi?id=796503